# bazel-bash-packaged

./: BUILD.bazel  README.md  WORKSPACE
bazel/macros/: BUILD.bazel  bats.bzl  bootstrap.yaml
bazel/rules/: deps.bzl
src/: cmdcli
tests/: test.bats
